// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLayout > renders desktop layout and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="w-full mx-auto relative max-w-7xl px-6 pb-10"
  >
    Desktop layout (max-w-7xl)
  </div>
</DocumentFragment>
`;

exports[`PageLayout > renders mobile layout and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="mx-auto relative w-full px-4"
  >
    Mobile layout (full width)
  </div>
</DocumentFragment>
`;

exports[`PageLayout > renders tablet layout and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="w-full mx-auto relative max-w-3xl px-4"
  >
    Tablet layout (max-w-3xl)
  </div>
</DocumentFragment>
`;
